feat(API): add direct email update endpoint
